--- a/gluten-free-multipurpose-mix.html
+++ b/gluten-free-multipurpose-mix.html
@@ -82,8 +82,8 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6 glutenfreepancakesec">
                         <h1>Gluten free <span style="color: #1F4F8F;">Multipurpose mix:</span> <br> the complete story</h1>
-                        <h2>"The 1:1 culinary Golden Ratio that is reinventing the way you bake” </h2>
-                        <p><strong>The great baking liberation:</strong> What if we told you there's a gluten free multipurpose mix that makes baked goods taste just better? It's time to turn gluten free baking from a chemistry experiment into indulgent, delectable joy. </p>
+                        <h2>“The 1:1 culinary Golden Ratio that is reinventing the way you bake” </h2>
+                        <p><strong>The great baking liberation:</strong> What if we told you there's a gluten free multipurpose mix that makes baked goods taste better? It's time to turn gluten free baking from a chemistry experiment into indulgent, delectable joy. </p>
                         
                             <p class="arrow">Meet your new <strong>secret ingredient <span><i class="ri-arrow-left-line arrow"></i> <i class="ri-arrow-right-line arrow"></i> </span></strong>  <strong>The 1:1 promise</strong></p>
                         
