--- a/gluten-free-pancake-mix.html
+++ b/gluten-free-pancake-mix.html
@@ -318,7 +318,7 @@
             <div class="btmtablelistsec">
                 <p>Trans fat content not more than 0.00 per cent by weight</p>
                 <p>Saturated fat content not more than 0.11 per cent by weight</p>
-                <p>*Approximate values & all specified nutrition values are based on calculated values - (Ref: NIN & US FDA norm).</p>
+                <p>*Approximate values & all specified nutrition values are based on calculated values - (Ref: NIN & US FDA norms)</p>
                 <p>** % Contribution to RDA calculated on the basis of 2000 kcal for average adult per day.</p>
             </div>
         </div>
@@ -336,11 +336,11 @@
                         <h3>The Classic Collection:</h3>
                         <p><strong>Fluffy Stack Pancakes:</strong> Light as clouds, sweet as dreams.</p>
                         <p><strong>Golden Waffles:</strong> Crispy outside, fluffy inside perfection.</p>
-                        <p><strong>Silver Dollar Minis::</strong> Perfect for little hands and big appetites.</p>
+                        <p><strong>Silver Dollar Minis:</strong> Perfect for little hands and big appetites.</p>
                     </div>
                     <div class="col-xl-5 offset-xl-2 col-lg-5 offset-lg-2 col-md-5 offset-md-2">
                         <h3>The Creative Adventures:</h3>
-                        <p><strong>Banana Pancake Bread:</strong> When Pancakes meets a loaf pan, it’s simply an indulgent treat.</p>
+                        <p><strong>Banana Pancake Bread:</strong> When Pancakes meet a loaf pan, it’s simply an indulgent treat.</p>
                         <p><strong>Pancake Muffins:</strong> Grab-and-go weekend treats.</p>
                         <p><strong>Pancake Cookies:</strong> The cookies family gets a tasty, scrumptious cousin.</p>
                     </div>
