--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="modalcontwidth">
                     <p>Our</p>
                     <p>AOECS certification process took multiple recipe iterations
-                        with an eye for detail for safety and ingredient quality. <br>
+                        with an eye for safety and ingredient quality. <br>
                       <strong> Perfectionism level: <br> Slightly obsessive </strong>
                     </p>
                 </div>
@@ -279,7 +279,7 @@
                     <h2>The Origin Story: <br> A Kitchen Revolution</h2>
                     <p>When our founder Raguram Raghulal embraced a gluten free lifestyle,<br> he didn't settle — he innovated. Like every gluten free food seeker, he found himself asking the same questions: "Will I have to compromise on taste? <br> Is it right for my palate? Will I miss out on delicious food?"</p>
                     <p>He turned this concern and empathy into a tenacious drive towards making gluten free cuisines desirable as any other loved tasty fare.</p>
-                    <p>Armed with decades of baking wizardry and an obsession with perfection, <br> we set out to prove that gluten free ingredients can indeed help you whip up the tastiest dishes. No love lost: only your tastebuds loving every bite.</p>
+                    <p>Armed with decades of baking wizardry and an obsession with perfection, <br> we set out to prove that gluten free ingredients can indeed help you whip up the tastiest dishes. No love lost: only your taste buds loving every bite.</p>
                     <p>Today, we're rewriting the rules of what gluten free can be. <br> One delectable bite at a time.</p>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-1">
@@ -428,8 +428,8 @@
                     <h3>Science Facts:</h3>
                     <p><strong>Fibre Content</strong><br>Our Gluten Free products are infused with fibre addressing dietary necessities.</p>
                     <p><strong>Dietary Fibre (g)</strong><br>Chapathi Mix: 2.39 <br>Multipurpose Mix: 2.22 <br> Pancake Mix: 2.09 <br> Maida: 2.76(IFCT); 3.20(test report) <br>Chakki Atta: 11.36 (IFCT); 9.2(test report)</p>
-                    <p><strong>Energy giving food</strong><br>Many professional athletes add gluten free food in their diet for better <br> nutrient absorption and to eliminate fatigue, leading to improved energy.</p>
-                    <p><strong>Absorption Power</strong><br>Psyllium Husk used in our mixes absorbs more water <br>improving texture and volume, and aids better digestion.</p>
+                    <p><strong>Energy-giving food</strong><br>Many professional athletes add gluten free food in their diet for better <br> nutrient absorption and to eliminate fatigue, leading to improved energy.</p>
+                    <p><strong>Absorption Power</strong><br>Psyllium Husk used in our mixes absorbs more water, <br>improving texture and volume, and aids better digestion.</p>
                     <h3>Reliteaur Facts:</h3>
                     <p><strong>Recipe Development</strong><br>Our founder taste-tested 200+ recipe iterations before perfection.</p>
                     <p><strong>Unique Certification</strong><br>We're an Indian gluten free brand with European Celiac Society approval.</p>
