--- a/recipe.html
+++ b/recipe.html
@@ -67,7 +67,7 @@
                     <div class="lftrecipecontsec">
                         <h1>Every Recipe, a <span style="color: #1F4F8F;">Gluten Free</span> Celebration</h1>
                         <h2>"The 1:1 Miracle That Breaks All Baking Rules"</h2>
-                        <p>Discover the joy of <strong>gluten free cooking with Reliteaur.</strong> <br> We believe food should be an adventure, not a compromise. <br> From tasty chapathis and pooris to scrumptious cakes, cookies and fluffy pancakes, explore easy, indulgent recipes that will delight your taste buds - <strong>no compromises, just pure flavour.</strong></p>
+                        <p>Discover the joy of <strong>gluten free cooking with Reliteaur.</strong> <br> We believe food should be an adventure, not a compromise. <br> From tasty chapathis and pooris to scrumptious cakes, cookies and fluffy pancakes, explore easy, indulgent recipes that will delight your taste buds — <strong>no compromises, just pure flavour.</strong></p>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6">
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="toprecipecontsec">
                 <h2>Gluten Free Recipes to Inspire and Delight</h2>
-                <p>Explore a world of flavour with recipes that turn every meal into a gluten free indulgence - simple, satisfying, and always delicious.</p>
+                <p>Explore a world of flavour with recipes that turn every meal into a gluten free indulgence — simple, satisfying, and always delicious.</p>
             </div>
             <div class="botrecipecontsec">
                 <div class="recipecontpart">
@@ -122,7 +122,7 @@
                                     <li>Gently level the dough/batter with a wet flat ladle, till it is smooth on the surface.</li>
                                     <li>Cover and proof dough/batter at 30°C and relative humidity of 70% for 30 - 40 minutes.</li>
                                     <li>Bake at 220°C (top heat) and 230°C (bottom heat) for 50 minutes or until done.</li>
-                                    <li>Inject steam for 4-5 seconds at the initial stage of baking, or pour a cup of water in the oven if steam option is not available.</li>
+                                    <li>Inject steam for 4-5 seconds at the initial stage of baking, or place a small oven-safe tray with a cup of water inside the oven to create steam if your oven doesn’t have a steam function.</li>
                                     <li>Cool for 90 minutes or until done, slice cooled loaf.</li>
                                 </ol>
                             </div>
@@ -149,6 +149,7 @@
                             </div>
                             <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-6 offset-md-1">
                                 <h3>Gluten Free Pizza - <br> Pan crust or pan fried</h3>
+                                <p>Reliteaur Gluten Free Multipurpose Mix - 150g</p>
                                 <p>Ingredients:</p>
                                 <p>Water - 105 ml approx.</p>
                                 <p>Dry yeast - 1/2 tsp</p>
@@ -156,7 +157,7 @@
                                 <p>Salt - 1/4 tsp</p>
                                 <p>Sunflower oil - 2 tsp</p>
                                 <p>Skimmed milk powder (optional) - 3 tsp</p>
-                                <p>Reliteaur Gluten Free Multipurpose Mix - 150g</p>
+                                
                             </div>
                         </div>
                         <div class="row">
@@ -171,7 +172,7 @@
                                     <li>Dough ball needs to be rested for 5 minutes after rounding, covered to avoid drying.</li>
                                     <li>Dough ball then needs to be flattened using a hand roller to the size of the pizza pan.</li>
                                     <li>Dock the dough using a fork and proof till the dough reaches 50 to 60 % height of the pan or till it doubles in initial dough volume.</li>
-                                    <li>Spread pizza sauce and favourite toppings on it. Spread mozzarella cheese.</li>
+                                    <li>Spread pizza sauce and your favourite toppings on it. Spread mozzarella cheese.</li>
                                     <li>Bake it in an oven for 200 °C for 20 min or until done.</li>
                                 </ol>
                             </div>
@@ -184,6 +185,7 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-6 col-12">
                                 <h3>Gluten Free Pizza - <br> Thin Crust</h3>
+                                <p>Reliteaur Gluten Free Multipurpose Mix - 150g</p>
                                 <p><strong>Ingredients:</strong></p>
                                 <p>Water - 105ml approx.</p>
                                 <p>Dry yeast - 1/4 tsp</p>
@@ -192,7 +194,7 @@
                                 <p>Sunflower oil - 4 tsp</p>
                                 <p>Skimmed milk powder (Optional) - 1/2 tsp</p>
                                 <p>Baking powder - 0.35 g (a pinch)</p>
-                                <p>Reliteaur Gluten Free Multipurpose Mix - 150g</p>
+                                
                             </div>
                             <div class="col-xl-6 col-lg-6 col-12"></div>
                         </div>
