--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
                 <div class="col-xxl-7 col-xl-6 col-lg-6 col-md-7">
                     <div class="lftblogcontsec">
                         <h1>A journey of gluten free goodness, great taste and indulgence</h1>
-                        <p>Reliteaur is more than a brand — it's an uplifting feeling, a promise of food safety, quality, taste and authenticity. It's also an invitation to join a growing community who seek flavourful food that nourishes the body and soul. <br> Be part of a wonderful gluten free journey that enable and empower you to celebrate food and taste without compromise.</p>
+                        <p>Reliteaur is more than a brand — it's an uplifting feeling, a promise of food safety, quality, taste and authenticity. It's also an invitation to join a growing community who seek flavourful food that nourishes the body and soul. <br> Be part of a wonderful gluten free journey that enables and empowers you to celebrate food and taste without compromise.</p>
                     </div>
                 </div>
                 <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-5">
