--- a/recipe.html
+++ b/recipe.html
@@ -95,7 +95,7 @@
                         <p><strong>Method of preparation</strong></p>
                         <ol>
                             <li>In a bowl take all ingredients and mix well till it forms a smooth dough. Rest the dough for 15 min, covered to avoid drying of dough.</li>
-                            <li>Cut the dough into dough balls (around 50g each) and sheet it to desired thickness using a hand roller.</li>
+                            <li>Cut the dough into dough balls (around 50g each) and roll it to desired thickness using a hand roller.</li>
                             <li>Cook it in a preheated tawa, cook both sides of the chapathi and serve hot with curry of choice.</li>
                         </ol>
                     </div>
