--- a/gluten-free-chapathi-mix.html
+++ b/gluten-free-chapathi-mix.html
@@ -326,7 +326,7 @@
             <div class="btmtablelistsec">
                 <p>Trans fat content not more than 0.00 per cent by weight.</p>
                 <p>Saturated fat content not more than 0.19 per cent by weight.</p>
-                <p>*Approximate values & all specified nutrition values are based on calculated values - (Ref: NIN & US FDA norm).</p>
+                <p>*Approximate values & all specified nutrition values are based on calculated values - (Ref: NIN & US FDA norms).</p>
                 <p>** % contribution to RDA calculated on the basis of 2000 kcal for average adult per day.</p>
             </div>
             <div class="btmtablecontpart">
@@ -357,7 +357,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <h3>The Plot Twists:</h3>
-                        <p><strong>Pizza Bases:</strong> Mamma Mia! Taste, consistency, mouth feel - all bases covered to whip up some favourites.</p>
+                        <p><strong>Pizza Bases:</strong> Mamma Mia! Taste, consistency, mouth feel — all bases covered to whip up some favourites.</p>
                         <p><strong>Fusion Roti Pizzas:</strong> Because why choose between cultures?</p>
                         <p><strong>Wraps & Rolls:</strong> Lunch just became a rock n' roll party for your tastebuds.</p>
                         <p><strong>Soft Taco Shells:</strong> Make that bread wear a sombrero and go taste-packed as a taco.</p>
