--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                 <p>&bull; AOECS certified = Internationally acclaimed.</p>
                                 <p>&bull; Every bite backed by 35+ full member societies on an international stage.</p>
                                 <p>&bull; Championing the interests of around 300,000 affected people affected by celiac disease. </p>
-                                <p>Source: <a href="#">www.aoecs.org</a></p>
+                                <p>Source: <a href="https://www.aoecs.org/">www.aoecs.org</a></p>
                             </div>
                         </div>
                         <div class="rytcommunitycontsec"><img src="images/img04-carousel.jpg"></div>
@@ -403,7 +403,7 @@
                         <li>The Crossed Grain Symbols: Recognised globally</li>
                     </ul>
                     <p>In India, we're practically the final word in gluten free. </p>
-                     <p>Source: <a href="https://aoecs.org">www.aoecs.org</a></p>
+                     <p>Source: <a href="https://www.aoecs.org/">www.aoecs.org</a></p>
                 </div>
                 <div class="col-xl-5 col-lg-5 col-md-5">
                     <div class="yellowfunfactsec">
