--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                 <h5>"Finally, food that doesn't make me feel like I deserve better.'"</h5>
                                 <p>&bull; AOECS certified = Internationally acclaimed.</p>
                                 <p>&bull; Every bite backed by 35+ full member societies on an international stage.</p>
-                                <p>&bull; Championing the interests of around 300,000 affected people affected by celiac disease. </p>
+                                <p>&bull; Championing the interests of around 300,000 affected by celiac disease. </p>
                                 <p>Source: <a href="https://www.aoecs.org/">www.aoecs.org</a></p>
                             </div>
                         </div>
