--- a/blog.html
+++ b/blog.html
@@ -186,6 +186,7 @@
 }
 
 @media (max-width: 576px) {
+  
     .modal-backdrop{
         height: 100%;
         width: 100%;
@@ -206,6 +207,7 @@
         }
 
         .modal-body {
+           
             padding: 15px;
         }
 
@@ -218,6 +220,18 @@
             line-height: 1.5;
         }
     }
+
+    /* @media (min-width:360px) and (max-width:480px){
+        .custom-modal {
+        margin-bottom: -200px;
+    }
+    }
+      @media (min-width:270px) and (max-width:360px){
+        .custom-modal {
+        margin-bottom: -300px;
+    }
+    } */
+   
 
     /* Accessibility Enhancements */
     .close-btn:focus {
