--- a/blog.html
+++ b/blog.html
@@ -231,6 +231,12 @@
         margin-bottom: -300px;
     }
     } */
+/* 
+     @media (min-width:360px) and (max-width:400px){
+        .custom-modal {
+        margin-bottom: -150px;
+    }
+    } */
    
 
     /* Accessibility Enhancements */
