--- a/blog.html
+++ b/blog.html
@@ -47,6 +47,10 @@
 
     <style>
 
+        .modal {
+            z-index: 99990;
+        }
+
 .lftblogcontsec h1 {
     margin-top: 30px;
     color: var(--white);
