--- a/blog.html
+++ b/blog.html
@@ -349,12 +349,14 @@
                     <p>
                         Let’s be honest. For years, “gluten free” had all the culinary excitement of a plain rice
                         cracker—safe, maybe, but not exactly soul-stirring. But taste, like trends, evolves. Today,
-                        chefs and home cooks alike know that gluten isn’t a synonym for “delicious.”
+                        chefs and home cooks alike know that gluten isn’t a synonym for “delicious.”<br/>
+                        <br/>
                         When you ditch wheat, you invite a whole world of grains—nutty millet, sweet corn flour, and
                         creamy buckwheat. Experiment with spices, roast them, toast them, make your kitchen the stage
                         for a riot of aroma. Add roasted garlic to your flatbread dough. Stir cinnamon and cardamom into
                         your pancake mix. And don’t forget crunch—chopped seeds in cookies add texture, style, and
-                        nutrition.
+                        nutrition.<br/>
+                        <br/>
                         All over India, innovative bakers and passionate parents are raising the bar, turning ‘gluten
                         free’ from a label into a promise of flavour. Gluten doesn’t own taste. We all do. Today’s
                         gluten free kitchen is a place for flavour chasers, not compromise-makers. Welcome to the
@@ -386,12 +388,14 @@
                         trick with gluten free living? Reinvent—not replace—what you love. Use jowar for rotis with
                         earthy complexity; replace maida in cakes with hearty oat flour. Rice flour transforms into
                         chewy, satisfying dosa and crisp pakora batters. Chickpea flour, with all its nutty bravado,
-                        elevates both savoury snacks and breakfast pancakes.
+                        elevates both savoury snacks and breakfast pancakes.<br/>
+                        <br/>
                         The real magic: gluten free flours carry flavour, not just function. Indian ingenuity means that
                         even age-old recipes get new life. If you’re a celiac, this isn’t flatbread exile—it’s a fresh
                         beginning. And if you’re simply health-curious, your world isn’t shrinking; it’s just expanding
                         its horizon, with every batch of gluten free poori or brownie pulled fresh from your oven.
-                        Tradition bends, but taste stays true.
+                        Tradition bends, but taste stays true.<br/>
+                        <br/>
                         Reliteaur keeps tradition alive with gluten free mixes made for Indian kitchens—chapatis, dosas,
                         poori, and even the indulgent pancakes, cookies and more, all find fresh expression. Their
                         blends are designed for seamless swaps, letting families enjoy authentic flavours while meeting
@@ -420,13 +424,15 @@
                         Let’s clear the plate: If you’re celiac, gluten free is non-negotiable. For others, it’s an
                         option—sometimes smart, sometimes unnecessary. Gluten free products aren’t automatically
                         healthier; some pack in extra starch and sugar, chasing texture and shelf life. That’s why
-                        reading labels matters—fibre, protein, real ingredients win every day.
+                        reading labels matters—fibre, protein, real ingredients win every day.<br/>
+                        <br/>
                         The best gluten free foods are those that focus on real nourishment, not just absence. Whole
                         foods like millets, potatoes, and legumes are gluten free by nature and full of nutrients. If
                         you aren’t medically required to steer clear of gluten, check with your doctor before
                         overhauling your diet. But if curiosity or taste guides you, lean into flavour and freshness,
                         not fads. The truth? In the kitchen, what matters most isn’t what’s missing—it’s what’s added,
-                        with care and craft. Myths begone.
+                        with care and craft. Myths begone.<br/>
+                        <br/>
                         Reliteaur champions transparency—every product is clearly labelled, certified gluten free, and
                         crafted with wholesome ingredients. Nutrition isn’t sacrificed for texture or shelf life. By
                         focusing on purity and taste, Reliteaur helps dispel gluten free myths, inviting everyone to
@@ -455,13 +461,15 @@
                         festivals and hospitality means endless refills, can be perilous for celiacs. The key? Advocate
                         for yourself—don't settle for vague assurances. Ask about cross-contamination, ingredient
                         sourcing, and preparation spaces. But don’t lose hope—awareness is up, and savvy restaurants now
-                        offer labelled gluten free options.
+                        offer labelled gluten free options.<br/>
+                        <br/>
                         Some chefs even love flexing their creativity, whipping up gluten free naans or millet-based
                         cakes. Carry a translation card if needed; it makes dietary needs clearer. Remember, your
                         experience shapes the future for others: every time you speak up, every positive review shared,
                         you’re not just feeding yourself—you’re nurturing a culture that values safe, tasty, inclusive
                         dining. For everyone chasing flavour minus gluten, vigilance and curiosity are your best
-                        companions.
+                        companions.<br/>
+                        <br/>
                         With Reliteaur, home cooks become culinary artists—our every gluten free mix is designed to
                         deliver great taste and texture that are restaurant-like, right in your own kitchen. Make fluffy
                         pancakes, artisan flatbreads, and golden cakes that taste like they came from the city’s
@@ -487,7 +495,8 @@
                     <p>
                         Raise your hand if you’ve heard someone say, “I’m gluten free for wellness.” Science says—maybe.
                         While people without celiac disease may not need to avoid gluten, a gluten free approach can
-                        jumpstart kitchen creativity and help some manage sensitivities.
+                        jumpstart kitchen creativity and help some manage sensitivities.<br/>
+                        <br/>
                         Indian super grains like ragi, bajra, and jowar aren’t just naturally gluten free—they’re
                         nutritional powerhouses, loved by generations. Going gluten free invites you to explore these
                         grains, discover new flavours, and shake up old food habits. For some, avoiding gluten means
@@ -495,7 +504,8 @@
                         health—balanced eating, mindful cooking, and doctor guidance matter most. Gluten free living is
                         no longer the lonely island; it’s a thriving archipelago of recipes, communities, and delicious
                         innovation. The upshot? Whether you’re celiac, sensitive, or just hungry for more, gluten free
-                        eating is about abundance, not absence. Enjoy the feast—everybody’s invited.
+                        eating is about abundance, not absence. Enjoy the feast—everybody’s invited.<br/>
+                        <br/>
                         Reliteaur celebrates wellness, blending time-tested grains and modern nutrition in its gluten
                         free range. Products are chosen as much for their health benefits as for versatility and
                         taste—so every customer, whether celiac or wellness seeker, finds pleasure and purpose with
@@ -609,7 +619,7 @@
                 <div class="blogcontbg">
                     <div class="blogthumb"><img src="images/blog_2.png"></div>
                     <div class="blogpostcontpart blogpostcontparts">
-                        <h2>Everyday Gluten Free: Seamless Swaps  for Traditional Indian Recipes</h2>
+                        <h2>Everyday Gluten Free: Seamless Swaps for Traditional Indian Recipes</h2>
 
                         <p class="para">
                             For many, wheat is woven into the very fibres of family meals—golden chapatis puffing on
@@ -630,10 +640,10 @@
                 <div class="blogcontbg">
                     <div class="blogthumb"><img src="images/blog_3.png"></div>
                     <div class="blogpostcontpart blogpostcontparts">
-                        <h2>Myths vs. Facts: What Everyone Should Know  About Gluten Free Diets</h2>
+                        <h2>Myths vs. Facts: What Everyone Should Know About Gluten Free Diets</h2>
 
                         <p class="para">
-                            “Gluten free is just a fad.” “It’ll fix everything.” “It’s only for the sick.”  These are
+                            “Gluten free is just a fad.” “It’ll fix everything.” “It’s only for the sick.” These are
                             myths. Let’s clear the plate: If you’re celiac, gluten free is non-negotiable. For others,
                             it’s an option—sometimes smart, sometimes unnecessary.
                         </p>
@@ -656,9 +666,7 @@
                         <h2>Eating Out Without Gluten: Tips for Safe, Delicious Restaurant Experiences</h2>
 
                         <p class="para">
-                            “Gluten free is just a fad.” “It’ll fix everything.” “It’s only for the sick.”  These are
-                            myths. Let’s clear the plate: If you’re celiac, gluten free is non-negotiable. For others,
-                            it’s an option—sometimes smart, sometimes unnecessary.
+                           The hardest part of gluten free living isn't avoiding the obvious—it’s spotting the sneaky wheat in sauces, thickeners, and grill baskets. Dining out in India, where menus read like food festivals and hospitality means endless refills, can be perilous for celiacs.
                         </p>
 
 
@@ -678,7 +686,7 @@
                         <h2>Beyond Celiac: Gluten Free Diets for Wellness Seekers</h2>
 
                         <p class="para">
-                            Raise your hand if you’ve heard someone say, “I’m gluten free for wellness.”  Science
+                            Raise your hand if you’ve heard someone say, “I’m gluten free for wellness.” Science
                             says—maybe. While people without celiac disease may not need to avoid gluten, a gluten free
                             approach can jumpstart kitchen creativity and help some manage sensitivities
                         </p>
